// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the summary correctlry 1`] = `
<div>
  <h3>
    Viewing 
    23
     
    expenses
     totalling 
    $27,670.35
  </h3>
</div>
`;

exports[`should render the summary correctlry with one expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h3>
</div>
`;
